# autokey

./: .gitignore  AutoKey.code-workspace  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  actioneditdialog.cpp  actioneditdialog.h  autokey.rc  classprofile.cpp  classprofile.h  config.json  configmanager.cpp  configmanager.h  keysimulator.cpp  keysimulator.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
.github/workflows/: build.yml  codeql.yml  release.yml
scripts/: build.ps1  package.ps1  setup-dev.ps1
